# starkit_ik_walk

./: .gitignore
controllers/ik_walk/: ik_walk.py  starkit_ik_walk.cp311-win_amd64.pyd
docker/: Dockerfile  build_container.sh  run.sh
libraries/IKWalk/: CMakeLists.txt  HumanoidModel.hpp  IKWalk.cpp  IKWalk.hpp  LegIK.cpp
libraries/IKWalk/python/: python.cpp
protos/LeggedRobot_description/: CMakeLists.txt  package.xml
protos/LeggedRobot_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
protos/LeggedRobot_description/meshes/: Ankle_v1_1.stl  Ankle_v1__1__1.stl  Ankle_v1__2__1.stl  Foot_v1_1.stl  Foot_v1__1__1.stl  Hip_joint_v1_1.stl  Hip_v1_1.stl  Hip_v1__1__1.stl  Lower_leg_v2_1.stl  Lower_leg_v2__1__1.stl  Upper_leg_v2_1.stl  Upper_leg_v2__1__1.stl  base_link.stl
protos/LeggedRobot_description/urdf/: LeggedRobot.gazebo  LeggedRobot.proto  LeggedRobot.trans  LeggedRobot.urdf  LeggedRobot.xacro  materials.xacro
protos/SAHRV74/: .SAHRV74.cache  .SAHRV74Robocup.cache  SAHRV74.proto  SAHRV74Robocup.proto
protos/SAHRV74/SAHRV74_meshes/: .SAHRV74_DXL_BoardMesh.cache  .SAHRV74_Front_dempherMesh.cache  .SAHRV74_HandleMesh.cache  .SAHRV74_Head_UpMesh.cache  .SAHRV74_camera_leftMesh.cache  .SAHRV74_camera_rightMesh.cache  .SAHRV74_cover_batteryMesh.cache  .SAHRV74_dubel01Mesh.cache  .SAHRV74_dubel02Mesh.cache  .SAHRV74_dubel03Mesh.cache  .SAHRV74_dubel04Mesh.cache  .SAHRV74_front_panelMesh.cache  .SAHRV74_head_1Mesh.cache  .SAHRV74_head_baseMesh.cache  .SAHRV74_joint_block01Mesh.cache  (+183 more)
worlds/: .sahr.wbproj  sahr.wbt
